# rust-rocket-boilerplate

./: Cargo.toml  LICENSE  README.md  Rocket.toml
config/: Prod.toml  README.md
migrations/2022-04-20-100000_create_table_member/: down.sql  up.sql
migrations/2022-04-20-200000_create_table_auth/: down.sql  up.sql
migrations/2022-04-20-300000_create_table_posts/: down.sql  up.sql
migrations/2022-04-20-400000_create_table_post_tag/: down.sql  up.sql
src/: config.rs  db_connection.rs  lib.rs  main.rs  schema.rs
src/catchers/: auth_catcher.rs  bad_request_catcher.rs  common_catcher.rs  mod.rs
src/domains/: mod.rs
src/domains/member/: dto.rs  member.rs  mod.rs  repository.rs  service.rs
src/domains/post/: domain.rs  dto.rs  repository.rs  service.rs
src/domains/session/: domain.rs  dto.rs  mod.rs  repository.rs  service.rs
src/from_requests/: member_from_request.rs  mod.rs
src/handlers/: healthz_handler.rs  member_handler.rs  mod.rs  post_handler.rs  session_handler.rs
src/helpers/: common.rs  db_helper.rs  mod.rs
src/helpers/db_helper/: count.rs  exist.rs
src/test_helper/: helper.rs
