[package]
name = "rust-rocket-boilerplate"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets", "uuid"] }
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "chrono", "r2d2", "numeric"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = "1.0.2"
serde_json = "1.0.2"
serde_derive = "1.0.2"
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
mailgun_v3 = "0.12.0"
rand = "0.8.5"
lazy_static = "1.4.0"
figment = { version = "0.10.6", features = ["toml"] }

